--- a/Module-3/index.html
+++ b/Module-3/index.html
@@ -12,7 +12,7 @@
 <header>
 <nav class="navbar navbar-light">
   <div class="container">
-  <b><a class="navbar-brand" href="#">Navbar</a></b>
+  <b><a class="navbar-brand" href="#">Food, LLC</a></b>
   <button class="d-block d-sm-none navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
     <span class="navbar-toggler-icon"></span>
   </button>
